[package]
name = "localstorage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.3.1", features = ["client"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
bidbook_rest = { path = "../bidbook_rest" }
